reports/03.log
Traceback (most recent call last):
  File "/home/dongorae/.local/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/dongorae/.local/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/dongorae/.local/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/dongorae/.local/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/home/dongorae/.local/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/dongorae/.local/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/dongorae/.local/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
<h1>ì˜¨ë¼ì¸ ê°•ì˜ íŒë§¤ê¸ˆì•¡ ê³„ì‚°</h1>
<form id="price-form">
    <label for="students">í•™ìƒ ìˆ˜:</label>
    <input type="number" id="students" name="students" min="1" required>
    <button type="submit">ê¸ˆì•¡ ê³„ì‚°</button>
</form>
<p id="result"></p>

<script>
    document.getElementById("price-form").addEventListener("submit", function(event) {
        event.preventDefault();

        const numberOfStudents = parseInt(document.getElementById("students").value, 10);
        const pricePerStudent = 20;
        let discount = 0;

        if (numberOfStudents >= 200) {
            discount = 0.7;
        } else if (numberOfStudents >= 100) {
            discount = 0.5;
        } else if (numberOfStudents >= 50) {
            discount = 0.3;
        } else if (numberOfStudents >= 10) {
            discount = 0.1;
        }

        const totalPrice = numberOfStudents * pricePerStudent * (1 - discount);
        document.getElementById("result").innerText = `ì „ì²´ íŒë§¤ê¸ˆì•¡: $${totalPrice.toFixed(2)}`;
    });
</script>
------------------

[0;36m  Cell [0;32mIn[1], line 1[0;36m[0m
[0;31m    <h1>ì˜¨ë¼ì¸ ê°•ì˜ íŒë§¤ê¸ˆì•¡ ê³„ì‚°</h1>[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1055739559.py, line 1)

